# cognito-clean

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  lambda_handler.py  pylintrc  pyproject.toml  requirements.txt  sonar-project.properties  template.yaml
.github/scripts/: update_version.py
.github/workflows/: build.yml  dry-run-release.yml  release.yml
cognito_clean/: cognito_cleaner.py  cognito_manager.py  config.py  file_manager.py  notification_service.py
tests/: test_cognito_manager.py  test_file_manager.py  test_notification_service.py
